--- a/esindex.css
+++ b/esindex.css
@@ -1,4 +1,4 @@
- #Accesorios ,#carrito{
+#Accesorios ,#carrito{
   margin: 0;
   padding: 0;
   background: url(https://github.com/Nahir13/Ecommerce/blob/main/img/FLogin.jpg?raw=true);
@@ -277,62 +277,112 @@ select{
     text-align: center;
 }
 .productos{
-    display: flex;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-    margin: 10px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: 100px, auto;
+    gap: 10px 20px;
+    text-align: center;
 }
 .foto{
     background-image: url(https://4.bp.blogspot.com/-aTO6McxCjNg/Tm0L0zxGA0I/AAAAAAAAAHI/wn1kpBr44cg/ELCONSTRUCTOR-Focos%252520H4%252520Tipo%252520Xenon%252520Autos%252520Y%252520Camionetas.jpg);
-    border: 1px solid #acdddd;
-    width: 310px;
-    height: 450px;
-    margin: 5px;margin-top: 10px;
-    padding: auto;
     background-repeat: no-repeat;
+    border: 1px solid #acdddd;
     background-color: white;
     background-position: center;
-    background-size: 150px;
     border-radius: 8px;
+    margin: 10px;
+    
 }
 .foto1{
     background-image: url(https://tse3.mm.bing.net/th?id=OIP.cd8Mm_8H2P-4dxO8RdHILQHaHa&pid=Api&P=0&h=180);
-    background-position: center;
-    background-color: white;
-    background-size: 150px;
-    width: 310px;
-    height: 450px;
-    border: 1px solid #acdddd;
-    margin: 10px;
-    padding: auto;
     background-repeat: no-repeat;
+    border: 1px solid #acdddd;
+    background-color: white;
+    background-position: center;
     border-radius: 8px;
+    margin: 10px;
 }
 .foto2{
     background-image: url(https://tse3.mm.bing.net/th?id=OIP.iNtX4zRV8PHqA4HmXMiqcAHaGY&pid=Api&P=0&h=180);
-    background-position: center;
-    width: 310px;
-    height: 450px;
+    background-repeat: no-repeat;
     border: 1px solid #acdddd;
+    background-color: white;
+    background-position: center;
     border-radius: 8px;
     margin: 10px;
-    padding: auto;
-    background-size: 150px;
-    background-repeat: no-repeat;
-    background-color: white;
 }
 .foto3{
     background-image: url(https://tse3.mm.bing.net/th?id=OIP.UjudSqDldQRGEz1ZX27lVQHaDy&pid=Api&P=0&h=180);
-    background-position: center;
-    width: 310px;
-    height: 450px;
-    border: 1px solid #acdddd;
-    margin: 10px;
-    padding: auto;
-    background-size: 200px;
     background-repeat: no-repeat;
+    border: 1px solid #acdddd;
     background-color: white;
+    background-position: center;
     border-radius: 8px;
+    margin: 10px;
+}
+.foto4{
+  background-image: url(https://www.volantessimracing.top/wp-content/uploads/2021/03/palanca-de-cambios-thrustmaster-TH8A-.jpg);
+  background-repeat: no-repeat;
+  border: 1px solid #acdddd;
+  background-color: white;
+  background-position: center;
+  border-radius: 8px;
+  margin: 10px;
+  background-size: 100px;
+}
+.foto5{
+  background-image: url(https://tse1.mm.bing.net/th?id=OIP.G69ikW2kQk_oboHp9aGiGAHaEE&pid=Api&P=0&h=180);
+  background-repeat: no-repeat;
+  border: 1px solid #acdddd;
+  background-color: white;
+  background-position: center;
+  border-radius: 8px;
+  margin: 10px;
+  background-size: 200px;
+}
+.foto6{
+  background-image: url(https://tse3.mm.bing.net/th?id=OIP.0LK7qXy9ZeXf6mynUO_rKAHaFj&pid=Api&P=0&h=180);
+  background-repeat: no-repeat;
+  border: 1px solid #acdddd;
+  background-color: white;
+  background-position: center;
+  border-radius: 8px;
+  margin: 10px;
+  background-size: 200px;
+}
+.foto7{
+  background-image: url(https://images.implementos.cl/img/1000/LIMCAR0038-1.jpg);
+  background-repeat: no-repeat;
+  border: 1px solid #acdddd;
+  background-color: white;
+  background-position: center;
+  border-radius: 8px;
+  margin: 10px;
+  background-size: 200px;
+}
+.foto:nth-child(1){
+  grid-column: 1 / 3;
+}
+.foto1:nth-child(2){
+  grid-column: 3 / 4;
+}
+.foto2:nth-child(3){
+  grid-column: 1 / 2;
+}
+.foto3:nth-child(4){
+  grid-column: 2 / 4;
+}
+.foto4:nth-child(5){
+  grid-column: 1 / 3;
+}
+.foto5:nth-child(6){
+  grid-column: 3 / 4;
+}
+.foto6:nth-child(7){
+  grid-column: 1 / 2;
+}
+.foto7:nth-child(8){
+  grid-column: 2 / 4;
 }
 h4{
     text-align: center;
@@ -361,7 +411,7 @@ u{
     text-align: center;
     width: 200px;
     height: 40px;
-    margin-left: 50px;
+    margin: auto;
     margin-bottom: 5px;
 }
 .PButton:hover{
