--- a/esindex.css
+++ b/esindex.css
@@ -311,97 +311,96 @@
   color: #fff;
   color: #fff;
 }
-#aboutUs {
-  background-image: url(https://github.com/Nahir13/Ecommerce/blob/main/img/FLogin.jpg?raw=true);
-  background-repeat: no repeat;
-  background-position: center center;
-  background-attachment: fixed;
-  background-size: cover;
-  margin: 0%;
-}
-P,
-h2 {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-}
-.frontview {
-  width: 98%;
-  background-color: #ffffff;
-  z-index: 100%;
-  margin: 10px;
-  border: 2px solid #ffffff;
-  border-radius: 5px;
-}
-.title {
-  font-size: 50px;
-  color: #313131;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-}
+ #aboutUs{ 
+    background-image: url(https://live.staticflickr.com/620/21200032406_a9f5a7f198_b.jpg);
+    background-repeat:  no repeat;   
+    background-position: center center;
+    background-attachment: fixed;
+    background-size: cover;
+    margin: 0%;
+  }
+  P, h2{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+   .frontview{
+     width: 98%; 
+     background-color: #ffffff;
+     z-index: 100%;
+     margin: 10px;
+     border: 2px solid #ffffff;
+     border-radius: 5px;
+    }
+    .title{
+      font-size: 50px;
+      color: #313131 ;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    }
 
-.text {
-  width: 98%;
-  background-color: #ffffff;
-  z-index: 100%;
-  margin: 10px;
-  border: 2px solid #ffffff;
-  border-radius: 5px;
-}
+    .texte{
+     width: 98%; 
+     background-color: #ffffff;
+     z-index: 100%;
+     margin: 10px;
+     border: 2px solid #ffffff;
+     border-radius: 5px;
+    }
 
-.quienesomos1 {
-  font-size: 40px;
-  color: #000;
-}
-.quienesomos {
-  font-size: 20px;
-  color: #000;
-}
-.unidos {
-  width: 100%;
-  height: 20%;
-  background-repeat: no-repeat;
-}
-.bannerunidos1 {
-  font-size: 45px;
-  color: #ffffff;
-  z-index: 100%;
-  position: absolute;
-  top: 270px;
-  left: 7%;
-}
-.bannerunidos {
-  font-size: 40px;
-  color: #ffffff;
-  z-index: 100%;
-  position: absolute;
-  top: 760px;
-  left: 7%;
-}
-.banner {
-  font-size: 35px;
-  color: #ffffff;
-  z-index: 100%;
-  position: absolute;
-  top: 400px;
-  left: 7%;
-}
-@media (width <= 1199px) {
-  .banner {
-    display: flex;
-    font-size: 20px;
-    top: 320px;
-  }
-  .bannerunidos {
-    display: flex;
-    font-size: 22px;
-    top: 520px;
-  }
-  .bannerunidos1 {
-    display: flex;
-    font-size: 22px;
-    top: none;
-  }
-}
+    .quienesomos1{
+      font-size: 40px ;
+      color: #000;
+
+    }
+    .quienesomos{
+      font-size: 20px ;
+      color: #000;
+     }   
+     .unidoss{
+      width: 100%;
+      height: 20%;
+      background-repeat: no-repeat;
+   }
+   .bannerunidoss1{
+     font-size: 45px;
+     color: #ffffff;
+     z-index: 100%;
+     position: absolute; 
+     top: 270px; 
+     left: 7%;
+
+   }
+   .bannerunidoss{
+     font-size: 40px;
+     color: #ffffff;
+     z-index: 100%;
+     position: absolute; 
+     top: 760px; 
+     left: 7%;
+
+   }
+   .bannerr{
+       font-size: 35px; 
+       color: #ffffff;
+       z-index: 100%   ;
+       position: absolute; top: 400px; left: 7%;
+
+   } 
+    @media(width <= 1199px){
+     .bannerr{
+       display: flex;
+       font-size: 20px;
+       top: 320px;
+     }
+     .bannerunidoss{
+       display: flex;
+       font-size: 22px;
+       top: 520px;
+     }
+     .bannerunidoss1{
+        display: flex;
+        font-size: 22px;
+        top: none;
+     } 
+   }
 .contenedor {
   text-align: center;
   background-color: #d6dac8;
