--- a/esindex.css
+++ b/esindex.css
@@ -14,120 +14,6 @@
   flex-wrap: wrap;
   margin: 10px;
 }
- #aboutUs{ 
-    background-image: url(https://live.staticflickr.com/620/21200032406_a9f5a7f198_b.jpg);
-    background-repeat:  no repeat;   
-    background-position: center center;
-    background-attachment: fixed;
-    background-size: cover;
-    margin: 0%;
-  }
-  P, h2{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  }
-.footoo:hover{
-  -webkit-box-shadow: 10px 10px 191px 4px rgba(0,0,0,0.75);
-  -moz-box-shadow: 10px 10px 191px 4px rgba(0,0,0,0.75);
-  box-shadow: 10px 10px 191px 4px rgba(0,0,0,0.75);
-  transform: scale(1.15);
-}
-.footoo1:hover{
-  -webkit-box-shadow: 10px 10px 191px 4px rgba(0,0,0,0.75);
-  -moz-box-shadow: 10px 10px 191px 4px rgba(0,0,0,0.75);
-  box-shadow: 10px 10px 191px 4px rgba(0,0,0,0.75);
-  transform: scale(1.15);
-}
-.footoo2:hover{
-  -webkit-box-shadow: 10px 10px 191px 4px rgba(0,0,0,0.75);
-  -moz-box-shadow: 10px 10px 191px 4px rgba(0,0,0,0.75);
-  box-shadow: 10px 10px 191px 4px rgba(0,0,0,0.75);
-  transform: scale(1.15);
-}
-.footoo3:hover{
-  -webkit-box-shadow: 10px 10px 191px 4px rgba(0,0,0,0.75);
-  -moz-box-shadow: 10px 10px 191px 4px rgba(0,0,0,0.75);
-  box-shadow: 10px 10px 191px 4px rgba(0,0,0,0.75);
-  transform: scale(1.15);
-}
-   .frontview{
-     width: 98%; 
-     background-color: #ffffff;
-     z-index: 100%;
-     margin: 10px;
-     border: 2px solid #ffffff;
-     border-radius: 5px;
-    }
-    .title{
-      font-size: 50px;
-      color: #313131 ;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    }
-
-    .texte{
-     width: 98%; 
-     background-color: #ffffff;
-     z-index: 100%;
-     margin: 10px;
-     border: 2px solid #ffffff;
-     border-radius: 5px;
-    }
-
-    .quienesomos1{
-      font-size: 40px ;
-      color: #000;
-
-    }
-    .quienesomos{
-      font-size: 20px ;
-      color: #000;
-     }   
-     .unidoss{
-      width: 100%;
-      height: 20%;
-      background-repeat: no-repeat;
-   }
-   .bannerunidoss1{
-     font-size: 45px;
-     color: #ffffff;
-     z-index: 100%;
-     position: absolute; 
-     top: 270px; 
-     left: 7%;
-
-   }
-   .bannerunidoss{
-     font-size: 40px;
-     color: #ffffff;
-     z-index: 100%;
-     position: absolute; 
-     top: 760px; 
-     left: 7%;
-
-   }
-   .bannerr{
-       font-size: 35px; 
-       color: #ffffff;
-       z-index: 100%   ;
-       position: absolute; top: 400px; left: 7%;
-
-   } 
-    @media(width <= 1199px){
-     .bannerr{
-       display: flex;
-       font-size: 20px;
-       top: 320px;
-     }
-     .bannerunidoss{
-       display: flex;
-       font-size: 22px;
-       top: 520px;
-     }
-     .bannerunidoss1{
-        display: flex;
-        font-size: 22px;
-        top: none;
-     } 
-   }
   .footoo{
       background-image: url(https://4.bp.blogspot.com/-aTO6McxCjNg/Tm0L0zxGA0I/AAAAAAAAAHI/wn1kpBr44cg/ELCONSTRUCTOR-Focos%252520H4%252520Tipo%252520Xenon%252520Autos%252520Y%252520Camionetas.jpg);
       border: 1px solid #acdddd;
@@ -384,7 +270,7 @@
   width: 100%;
   margin-bottom: 20px;
 }
-.login-box input[type="text"],
+.login-box input[type="email"],
 .login-box input[type="password"] {
   border: none;
   border-bottom: 1px solid #fff;
@@ -425,7 +311,97 @@
   color: #fff;
   color: #fff;
 }
+#aboutUs {
+  background-image: url(https://github.com/Nahir13/Ecommerce/blob/main/img/FLogin.jpg?raw=true);
+  background-repeat: no repeat;
+  background-position: center center;
+  background-attachment: fixed;
+  background-size: cover;
+  margin: 0%;
+}
+P,
+h2 {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+.frontview {
+  width: 98%;
+  background-color: #ffffff;
+  z-index: 100%;
+  margin: 10px;
+  border: 2px solid #ffffff;
+  border-radius: 5px;
+}
+.title {
+  font-size: 50px;
+  color: #313131;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
 
+.text {
+  width: 98%;
+  background-color: #ffffff;
+  z-index: 100%;
+  margin: 10px;
+  border: 2px solid #ffffff;
+  border-radius: 5px;
+}
+
+.quienesomos1 {
+  font-size: 40px;
+  color: #000;
+}
+.quienesomos {
+  font-size: 20px;
+  color: #000;
+}
+.unidos {
+  width: 100%;
+  height: 20%;
+  background-repeat: no-repeat;
+}
+.bannerunidos1 {
+  font-size: 45px;
+  color: #ffffff;
+  z-index: 100%;
+  position: absolute;
+  top: 270px;
+  left: 7%;
+}
+.bannerunidos {
+  font-size: 40px;
+  color: #ffffff;
+  z-index: 100%;
+  position: absolute;
+  top: 760px;
+  left: 7%;
+}
+.banner {
+  font-size: 35px;
+  color: #ffffff;
+  z-index: 100%;
+  position: absolute;
+  top: 400px;
+  left: 7%;
+}
+@media (width <= 1199px) {
+  .banner {
+    display: flex;
+    font-size: 20px;
+    top: 320px;
+  }
+  .bannerunidos {
+    display: flex;
+    font-size: 22px;
+    top: 520px;
+  }
+  .bannerunidos1 {
+    display: flex;
+    font-size: 22px;
+    top: none;
+  }
+}
 .contenedor {
   text-align: center;
   background-color: #d6dac8;
@@ -1030,7 +1006,4 @@ p {
 .boton-comprar:active {
   box-shadow: 0 0 #2c0b8e;
   top: 5px;
-}
-.autosventa{
-  font-size: 50px;
 }
